--- a/front/src/index.css
+++ b/front/src/index.css
@@ -4,8 +4,12 @@ html, body {
 }
 
 .form-signin {
-  max-width: 330px;
+  max-width: 400px;
   padding: 15px;
+}
+
+.form-signup{
+  max-width: 400px;
 }
 
 .form-signin .form-floating:focus-within {
